deployment_production/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: snn-fusion
  labels:
    name: snn-fusion
    environment: production
